--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						</div>
 
 						<div class="contac-row2-right">
-							<div class="contac-row2-wordi">PM AMOI WHATSAPP UTAMA</div>
+							<div class="contac-row2-wordi">WHATSAPP UTAMA</div>
 						</div>
 
 					</div>
@@ -64,7 +64,7 @@
 						</div>
 
 						<div class="contac-row2-right">
-							<div class="contac-row2-wordi">PM AMOI TELEGRAM UTAMA</div>
+							<div class="contac-row2-wordi">TELEGRAM UTAMA</div>
 						</div>
 
 					</div>
@@ -83,7 +83,7 @@
 						</div>
 
 						<div class="contac-row2-right">
-							<div class="contac-row2-wordi">BUKTI CUCI & TIPS GAME</div>
+							<div class="contac-row2-wordi">BUKTI CUCI</div>
 						</div>
 
 					</div>
@@ -102,7 +102,7 @@
 						</div>
 
 						<div class="contac-row2-right">
-							<div class="contac-row2-wordi">PM WHATSAPP BACKUP</div>
+							<div class="contac-row2-wordi">WHATSAPP BACKUP</div>
 						</div>
 
 					</div>
@@ -121,7 +121,7 @@
 						</div>
 
 						<div class="contac-row2-right">
-							<div class="contac-row2-wordi">PM TELEGRAM BACKUP</div>
+							<div class="contac-row2-wordi">TELEGRAM BACKUP</div>
 						</div>
 
 					</div>
