--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 			<div class="contac-row2-per">
-				<a href="https://mc777sms.wasap.my">
+				<a href="https://mc777main.wasap.my">
 
 					<div class="contac-row2-container-cover">
 
@@ -93,7 +93,7 @@
 
 
 			<div class="contac-row2-per">
-				<a href="https://mc777sms2.wasap.my">
+				<a href="https://mc777backup.wasap.my">
 
 					<div class="contac-row2-container-cover">
 
